Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp
@@ -364,7 +364,6 @@ void InspectorTimelineAgent::willComposite(Frame& frame)
 
 void InspectorTimelineAgent::didComposite()
 {
-    ASSERT(m_startedComposite);
     didCompleteCurrentRecord(TimelineRecordType::Composite);
     m_startedComposite = false;
 }
